fix: Updated init names, file paths and notebook
Init name altered from symspellpy to scapade for usability.
Notebook updated and working as a sample now.
editdistance altered for file paths to allow simple notebook to run from differnt location.

--- a/S-capade Single Phoneme Sequence Correction Demo.ipynb
+++ b/S-capade Single Phoneme Sequence Correction Demo.ipynb
@@ -4,6 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# S-capade Single Phoneme Sequence Correction Demo\n",
     "This file is a quick implementation of the S-capade method which acoustic edit distance and phoneme sequence representations of misspellings to attempt corrections. To generate the phoneme sequence representation of the misspellings, the CMU dictionary is used. To generate candidate lists using symmetric deletes (for speed), an adaption of SymSpell/SymSpellPy is used. This is a demo only, and adapated from the core code located in text_processing.dataset_processing.symspell_scapade. Usually, you would pass entire word lists to the tool, in the format  \n",
     "\n",
     "\\\\$accommodate  \n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,24 +33,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Load S-capade method - only need to do this once, this takes the longest time at outset\n",
-    "def scapade():\n",
-    "    Scapade = symspellscapade.SymSpell\n",
-    "    Verbosity = symspellscapade.Verbosity\n",
-    "    scapade = Scapade(max_dictionary_edit_distance=2, prefix_length=15)\n",
-    "    dictionary_path = pkg_resources.resource_filename(\"symspellpy_scapade\", \"cmu_frequency_added.csv\")\n",
-    "    scapade.load_dictionary(dictionary_path, term_index=1, count_index=2)\n",
-    "    return sym_spell\n",
-    "scapade = scapade()"
+    "SymSpell = symspellscapade.SymSpell\n",
+    "Verbosity = symspellscapade.Verbosity\n",
+    "scapade = SymSpell(max_dictionary_edit_distance=2, prefix_length=15)\n",
+    "dictionary_path = pkg_resources.resource_filename(\"symspellpy_scapade\", \"cmu_frequency_added.csv\")\n",
+    "scapade.load_dictionary(dictionary_path, term_index=1, count_index=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,9 +68,9 @@
     "# You can generate phoneme sequences to pass to it using http://www.speech.cs.cmu.edu/cgi-bin/cmudict or\n",
     "# you write a shell script to work beside this example so you only need to pass word misspellings in and get \n",
     "# corrections out\n",
-    "def correction(phoneme_sequence):\n",
+    "def correction(scapade, phoneme_sequence):\n",
     "    misspelling = phoneme_sequence\n",
-    "    suggestions = sym_spell.lookup(misspelling, Verbosity.ALL)\n",
+    "    suggestions = scapade.lookup(misspelling, Verbosity.ALL)\n",
     "    input_path_csv = Path(\"input_files/\") / \"cmu_frequency_added.csv\"\n",
     "    df = pd.read_csv(input_path_csv, names=['word', 'seq', 'count'])\n",
     "    correction_dict =  {misspelling:{\"suggested_correction\":\"\", \"candidates\":[]}}\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,12 +104,12 @@
    ],
    "source": [
     "# anybody - enybody EH N IY B AH D IY\n",
-    "print(correction(\"EH N IY B AH D IY\"))"
+    "print(correction(scapade, \"EH N IY B AH D IY\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -113,12 +122,12 @@
    ],
    "source": [
     "# example - egsample EH G S AE M P AH L\n",
-    "print(correction(\"EH G S AE M P AH L\"))"
+    "print(correction(scapade, \"EH G S AE M P AH L\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,8 +140,15 @@
    ],
    "source": [
     "# necessarily N EH S AH K EH R IY AH L IY\n",
-    "print(correction(\"N EH S AH K EH R IY AH L IY\"))"
+    "print(correction(scapade,\"N EH S AH K EH R IY AH L IY\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
