docs: Updated readme example distance, tidied demo

--- a/S-capade Single Phoneme Sequence Correction Demo.ipynb
+++ b/S-capade Single Phoneme Sequence Correction Demo.ipynb
@@ -24,7 +24,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from text_processing.dataset_processing import symspell_scapade\n",
     "from pathlib import Path\n",
     "from symspellpy_scapade import symspellscapade\n",
     "import pkg_resources\n",
@@ -145,10 +144,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'S IH CH W EH SH AH N': {'suggested_correction': 'situation', 'candidates': ['situation', 'secession']}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# necessarily N EH S AH K EH R IY AH L IY\n",
+    "print(correction(scapade,\"S IH CH W EH SH AH N\"))"
+   ]
   }
  ],
  "metadata": {
